# OPNSpeedGuard

./: .gitignore  LICENSE  README.md  auto_connect.py  config.py  manual_connect.py  name_translation.py  opnspeedguard.py  pyproject.toml  requirements.txt  speedtest_test.py  speedtest_utils.py  wg_peer.py
src/opnspeedguard/: __main__.py  auto_connect.py  cli.py  cli_config.py  config.py  speedtest_utils.py  wg_peer.py
